# gizmo

./: \  pyproject.toml  pyproject_.toml  requirements.txt  setup.py  tags
application/: __init__.py
application/app/mode/: __init__.py  base.py
qapp/: __init__.py
qapp/app/: __init__.py
qapp/app/docks/: docks.py
qapp/app/mode/: base.py
qapp/app/statusbar/: base.py
qapp/plug/: app.py  base.py
qapp/plugin/: __init__.py  app.py  base.py  widget.py
qapp/utils/: listener_key.py  register.py
qapp/widget/stack/: input_list_stack.py
src/gizmo/ui/: __init__.py  configure.py
src/gizmo/utils/: __init__.py  cfman.py  ear.py  listener_event.py  meta.py  meta_class.py  meta_key.py  metakey.py  register.py  tab_size.py  tag.py  task.py
src/gizmo/vimo/: __init__.py
src/gizmo/widget/: __init__.py
src/qapp/: __init__.py
src/qapp/app/: __init__.py
src/qapp/core/: __init__.py
src/qapp/plug/: __init__.py  app.py  base.py  obj.py  widget.py
src/qapp/utils/: __init__.py  editor.py  listener_zmq.py
tests/: conftest.py  test_mode.py  test_obj.py
todo/: display_.py  item_.py  listwidget.py  listwidget.py_  listwidget_.py  treeview.py  widgets.py  window.py_
todo/back/list_/: view.py
todo/back/stack_/: command_stack.py  input_browser_stack.py  input_list_stack.py
todo/components/: qedit.py  qmainwindow.py  qmessage.py
todo/widgets_/: listwidget.py  shortcut.py  treeview.py
todo/widgets_/components/: qinput.py  qlistwidget.py
todo/widgets_/rest/: container_.py  display_.py  item_.py  itemmodel_.py  listwidget_.py  qlistwidget_.py
(+358 files in other folders)
