[tool.poetry]
name = "gizmo"
version = "0.0.1"
description = "Qt UI tool"
authors = ["A O <adhambek.otabekov.post@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynvim = ">=0.4.3"
pyqt5-qt5 = "==5.15.2"
PyQtWebEngine = ">=5.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
